# RoboCrew

./: .gitignore  README.md  pyproject.toml
calibrations/: robot_arms.json
docs/: MANIPULATION_QUICKSTART.md  OBJECT_MANIPULATION_INTEGRATION_PLAN.md
examples/: manipulation_demo.py  memory_demo.py  robot_with_memory.py  xlerobot_controler.py
src/robocrew/core/: LLMAgent.py  memory.py  tools.py
src/robocrew/robots/XLeRobot/: arm_config.json  arm_controls.py  manipulation_tools.py  servo_controls.py  tools.py
tests/: main.py  startWebserver.py  web_server.py
tests/static/: style.css
tests/templates/: index.html
