[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "robocrew"
version = "0.0.1"
authors = [
  { name="Grigorij Dudnik", email="dudnikgrv@gmail.com" },
  { name="Konrad Suchodolski", email="konrad.suchodolski50@gmail.com" },
]
description = "🦾Set up your embodied LLM agent same easiness as you set up normal agents in CrewAI or Autogen"
dependencies = [
    "langchain>=0.3.27",
    "langchain-core>=0.3.79",
    "langchain-google-genai",
    "lerobot>=0.4.2",
    "opencv-python",
    "pyaudio",
    "pyserial>=3.5",
    "python-dotenv>=1.1.1",
    "openai>=2.3.0",
    "feetech-servo-sdk",
    "flask>=3.0.0",
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*", ".github/LICEN[CS]E*"]

[project.scripts]
robocrew-generate-udev-rules = "robocrew.scripts.robocrew_generate_udev_rules:main"
robocrew-find-components = "robocrew.scripts.robocrew_find_components:main"

[project.urls]
Homepage = "https://github.com/Grigorij-Dudnik/RoboCrew"

[tool.hatch.metadata]
allow-direct-references = true
